--- a/categories/cat.css
+++ b/categories/cat.css
@@ -84,3 +84,17 @@ body{
     font-size: 30px;
 
 }
+.fa-user {
+    color: white;
+    font-size: 25px;
+}
+ .user a{
+    text-decoration: none;
+    color: white;
+    font-size: 25px;
+    font-family: "Overlock", sans-serif;
+    padding: 10px;
+}
+.user a:hover{
+    color:goldenrod ;
+}
